fix(server): Normalize line endings and stabilize core microservices

--- a/server/.env
+++ b/server/.env
@@ -15,3 +15,10 @@ MONGO_SHOPPING_URI = "mongodb://localhost:27017/shopping"
 
 PROMOTION_PORT = 5004
 MONGO_PROMOTION_URI = "mongodb://localhost:27017/promotion"
+
+EMAIL_PORT = 5005
+EMAIL_USER=trongdeptrai146@gmail.com   
+EMAIL_PASS=qpyz mopa bfpo spcj 
+
+NOTIFICATION_PORT = 5006
+MONGO_NOTIFICATION_URI = "mongodb://localhost:27017/notification"
