--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,9 @@
     "services/indentitys",
     "services/users",
     "services/shopping",
-    "services/promotions"
+    "services/promotions",
+    "services/emails",
+    "services/notifications"
   ],
   "scripts": {
     "start:gateway": "npm --workspace gateway run start",
@@ -17,6 +19,8 @@
     "start:users": "npm --workspace services/users run start",
     "start:shopping": "npm --workspace services/shopping run start",
     "start:promotions": "npm --workspace services/promotions run start",
-    "start:all": "concurrently \"npm run start:gateway\" \"npm run start:indentitys\" \"npm run start:users\" \"npm run start:shopping\" \"npm run start:promotions\" "
+    "start:emails": "npm --workspace services/emails run start",
+    "start:notifications": "npm --workspace services/notifications run start",
+    "start:all": "concurrently \"npm run start:gateway\" \"npm run start:indentitys\" \"npm run start:users\" \"npm run start:shopping\" \"npm run start:promotions\" \"npm run start:emails\" \"npm run start:notifications\""
   }
 }
