Add many services: payment,order, cart

--- a/server/.env
+++ b/server/.env
@@ -5,20 +5,27 @@ JWT_SECRET = "TaiTriTrong"
 GATEWAY_PORT = 5000
 
 INDENTITY_PORT = 5001
-MONGO_INDENTITY_URI = "mongodb://localhost:27017/indentity"
+MONGO_INDENTITY_URI = "mongodb://localhost:27017/indentity?replicaSet=rs0"
 
 USER_PORT = 5002
-MONGO_USER_URI = "mongodb://localhost:27017/user"
+MONGO_USER_URI = "mongodb://localhost:27017/user?replicaSet=rs0"
 
 SHOPPING_PORT = 5003
-MONGO_SHOPPING_URI = "mongodb://localhost:27017/shopping"
+MONGO_SHOPPING_URI = "mongodb://localhost:27017/shopping?replicaSet=rs0"
 
-PROMOTION_PORT = 5004
-MONGO_PROMOTION_URI = "mongodb://localhost:27017/promotion"
+SOLUTIONS_PORT = 5004
+MONGO_SOLUTIONS_URI = "mongodb://localhost:27017/solution?replicaSet=rs0"
 
 EMAIL_PORT = 5005
 EMAIL_USER=trongdeptrai146@gmail.com   
 EMAIL_PASS=qpyz mopa bfpo spcj 
 
 NOTIFICATION_PORT = 5006
-MONGO_NOTIFICATION_URI = "mongodb://localhost:27017/notification"
+MONGO_NOTIFICATION_URI = "mongodb://localhost:27017/notification?replicaSet=rs0"
+
+PAYMENT_PORT = 5007
+MONGO_PAYMENT_URI = "mongodb://localhost:27017/payment?replicaSet=rs0"
+MOMO_ACCESS_KEY=F8BBA842ECF85
+MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
+MOMO_PARTNER_CODE=MOMO
+MOMO_API_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create 
