--- a/server/services/solutions/package.json
+++ b/server/services/solutions/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "promotions-ervice",
+  "name": "solutions-services",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "license": "ISC",
   "type": "module"
 }
