--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "handlebars": "^4.7.8",
     "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "juice": "^11.0.3",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
   },
