--- a/server/package.json
+++ b/server/package.json
@@ -9,18 +9,20 @@
     "services/indentitys",
     "services/users",
     "services/shopping",
-    "services/promotions",
+    "services/solutions",
     "services/emails",
-    "services/notifications"
+    "services/notifications",
+    "services/payments"
   ],
   "scripts": {
     "start:gateway": "npm --workspace gateway run start",
     "start:indentitys": "npm --workspace services/indentitys run start",
     "start:users": "npm --workspace services/users run start",
     "start:shopping": "npm --workspace services/shopping run start",
-    "start:promotions": "npm --workspace services/promotions run start",
+    "start:solutions": "npm --workspace services/solutions run start",
     "start:emails": "npm --workspace services/emails run start",
     "start:notifications": "npm --workspace services/notifications run start",
-    "start:all": "concurrently \"npm run start:gateway\" \"npm run start:indentitys\" \"npm run start:users\" \"npm run start:shopping\" \"npm run start:promotions\" \"npm run start:emails\" \"npm run start:notifications\""
+    "start:payments": "npm --workspace services/payments run start",
+    "start:all": "concurrently \"npm run start:gateway\" \"npm run start:indentitys\" \"npm run start:users\" \"npm run start:shopping\" \"npm run start:solutions\" \"npm run start:emails\" \"npm run start:notifications\" \"npm run start:payments\""
   }
 }
