--- a/server/.env
+++ b/server/.env
@@ -29,3 +29,6 @@ MOMO_ACCESS_KEY=F8BBA842ECF85
 MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
 MOMO_PARTNER_CODE=MOMO
 MOMO_API_ENDPOINT=https://test-payment.momo.vn/v2/gateway/api/create 
+
+REPORTING_PORT = 5008
+MONGO_REPORTING_URI = "mongodb://localhost:27017/reporting?replicaSet=rs0"
