--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "@tinymce/tinymce-react": "^6.3.0",
+    "axios": "^1.13.2",
     "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -19,6 +20,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
+    "recharts": "^3.4.1",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.16"
